Wed Aug 05 00:18:25 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS,docs/image.rst,xappy/colour.py,xappy/fieldactions.py,
	  xappy/searchconnection.py,xappy/unittests/colour.py: Merge in
	  changes from colour branch.

Tue Aug 04 21:39:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update revision numbers, and add
	  coloursim branch.

Tue Jul 28 17:16:32 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: remove postingsources branch - now
	  merged to trunk.

Sun Jul 19 15:46:43 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/: Remove replaylog functionality - it never fully worked,
	  and it's better to either use python's trace functions, or a
	  debug logging build of xapian.

Sun Jul 19 15:37:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,utils/make_xappy_tarballs,
	  xappy/_checkxapian.py,xappy/doctests/searchconnection_doctest2.txt,
	  xappy/doctests/searchconnection_doctest3.txt,xappy/fieldactions.py,
	  xappy/searchconnection.py,xappy/unittests/: Remove TAG feature -
	  it can be implemented (and more efficiently) using FACET.

Sun Jul 19 10:23:05 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Apply
	  trimming of the terms in PrefixedTermIterator after removing the
	  prefix, instead of before.  Allows the special handling for
	  colons to work correctly.

Fri Jun 19 11:14:51 BST 2009  Tom Mortimer <tom@flax.co.uk>

	* xappy/indexerconnection.py: Allow PrefixedTermIter to take an
	  explicit trim length (for removing prefix).
	* xappy/searchconnection.py: Added optional starts_with parameter
	  to iter_terms_for_field().

Tue May 26 07:54:48 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Don't recalculate all the potentials
	  each time - just update the one which has changed.  About 50%